--- a/layouts/partials/views/citation.html
+++ b/layouts/partials/views/citation.html
@@ -25,7 +25,7 @@
   {{ end }}
 
   {{/* MLA Style */}}
-  {{ else }}
+  {{ else if eq (site.Params.publications.citation_style ) "mla" }}
 
   <span class="article-metadata li-cite-author">
     {{ partial "page_metadata_authors" $item }}.
@@ -43,6 +43,29 @@
     {{ partial "page_links" (dict "page" $item "is_list" 1) }}
   </div>
   {{ end }}
+  
+  {{/* Sangdon Style */}}
+  {{ else }}
 
+  
+  <a href="{{ $item.RelPermalink }}" class="font-bold">{{ $item.Title }}</a>
+  </br>
+  <span class="article-metadata li-cite-author">
+    {{ partial "page_metadata_authors" $item }}
+  </span>
+  <br/>
+  {{ if $item.Params.publication_short }}
+    {{- $item.Params.publication_short | markdownify -}},
+  {{ else if $item.Params.publication }}
+    {{- $item.Params.publication | markdownify -}},
+  {{ end }}
+  {{- $item.Date.Format "2006" -}}
+
+  {{ if $has_attachments }}
+  <div class="flex flex-wrap space-x-3">
+    {{ partial "page_links" (dict "page" $item "is_list" 1) }}
+  </div>
+  {{ end }}
+  
   {{ end }}
 </div>
