fix contact issues

--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -20,7 +20,7 @@
         {{ end }}
       {{ end }}
     </div>
-    <div class="page-body {{if ne .Type "landing"}} my-10{{end}}">
+    <div class="page-body {{if ne .Type "landing"}} my-10 px-4 sm:px-6 md:px-8{{end}}">
       {{ block "main" . }}{{ end }}
     </div>
     <div class="page-footer">
