--- a/layouts/partials/blox/markdown.html
+++ b/layouts/partials/blox/markdown.html
@@ -1,19 +1,23 @@
 {{/* Hugo Blox: Markdown */}}
-{{/* Documentation: https://hugoblox.com/blocks/ */}}
-{{/* License: https://github.com/HugoBlox/hugo-blox-builder/blob/main/LICENSE.md */}}
-
-{{/* Initialise */}}
 {{ $page := .wcPage }}
 {{ $block := .wcBlock }}
 {{ $title := $block.content.title | emojify | $page.RenderString }}
 {{ $text := $block.content.text | emojify | $page.RenderString | safeHTML }}
 
-<div class="flex flex-col items-center max-w-prose mx-auto gap-3 justify-center px-6">
+<div class="w-full px-4 sm:px-6 md:px-8 lg:px-12">
+  <div class="w-full max-w-6xl mx-auto flex flex-col gap-6 justify-center">
 
-  <div class="mb-6 text-3xl font-bold text-gray-900 dark:text-white">
-    {{ $title }}
+    {{ with $title }}
+      <h2 class="text-3xl font-bold text-gray-900 dark:text-white text-center">
+        {{ . }}
+      </h2>
+    {{ end }}
+
+    {{ with $text }}
+      <div class="prose prose-slate lg:prose-xl dark:prose-invert w-full max-w-full">
+        {{ . }}
+      </div>
+    {{ end }}
+
   </div>
-
-  {{/* We use DIV rather than P to support `prose` class and multiple paragraphs */}}
-  {{ with $text }}<div class="prose prose-slate lg:prose-xl dark:prose-invert max-w-prose">{{ . }}</div>{{ end }}
 </div>
