--- a/layouts/partials/views/citation.html
+++ b/layouts/partials/views/citation.html
@@ -47,8 +47,7 @@
   {{/* Sangdon Style */}}
   {{ else }}
 
-  
-  <a href="{{ $item.RelPermalink }}" class="font-bold">{{ $item.Title }}</a>
+  <span class="font-bold">{{ $item.Title }}</span>
   </br>
   <span class="article-metadata li-cite-author">
     {{ partial "page_metadata_authors" $item }}
