--- a/layouts/partials/views/citation.html
+++ b/layouts/partials/views/citation.html
@@ -47,7 +47,16 @@
   {{/* Sangdon Style */}}
   {{ else }}
 
-  <span class="font-bold">{{ $item.Title }}</span>
+  <span class="font-bold">
+  {{ with $item.Params.links }}
+    <a href="{{ (index . 0).url }}" target="_blank" rel="noopener">
+      {{ $item.Title }}
+    </a>
+  {{ else }}
+    {{ $item.Title }}
+  {{ end }}
+  </span>
+  
   </br>
   <span class="article-metadata li-cite-author">
     {{ partial "page_metadata_authors" $item }}
@@ -56,17 +65,17 @@
   {{ if $item.Params.publication }}
     {{- $item.Params.publication | markdownify -}}
     {{ if $item.Params.tags }}
-      {{ printf " (**%s**)" (index $item.Params.tags 0) | markdownify -}}
+    ({{ printf "**%s**" (index $item.Params.tags 0) | markdownify -}})
     {{ end }},
   {{ end }}
   
   {{- $item.Date.Format "2006" -}}
 
-  {{ if $has_attachments }}
-  <div class="flex flex-wrap space-x-3">
-    {{ partial "page_links" (dict "page" $item "is_list" 1) }}
-  </div>
-  {{ end }}
+<!--  {{ if $has_attachments }}-->
+<!--  <div class="flex flex-wrap space-x-3">-->
+<!--    {{ partial "page_links" (dict "page" $item "is_list" 1) }}-->
+<!--  </div>-->
+<!--  {{ end }}-->
   
   {{ end }}
 </div>
