--- a/layouts/partials/views/citation.html
+++ b/layouts/partials/views/citation.html
@@ -62,15 +62,16 @@
     {{ partial "page_metadata_authors" $item }}
   </span>
   <br/>
+  <span class="article-metadata li-cite-author">
   {{ if $item.Params.publication }}
     {{- $item.Params.publication | markdownify -}}
     {{ if $item.Params.tags }}
-    ({{ printf "**%s**" (index $item.Params.tags 0) | markdownify -}})
-    {{ end }},
+    ({{ printf "**%s**" (index $item.Params.tags 0) | markdownify -}}),
+    {{ end }}
   {{ end }}
   
   {{- $item.Date.Format "2006" -}}
-
+  </span>
 <!--  {{ if $has_attachments }}-->
 <!--  <div class="flex flex-wrap space-x-3">-->
 <!--    {{ partial "page_links" (dict "page" $item "is_list" 1) }}-->
