--- a/layouts/partials/blox/resume-biography.html
+++ b/layouts/partials/blox/resume-biography.html
@@ -94,8 +94,7 @@
 
   {{ with $person.research_mission }}
     <div class="not-prose mt-3 mb-5 text-center research-mission flex items-center justify-center gap-2">
-      <span class="opacity-70">🧭</span>
-      <span>{{ . }}</span>
+      <span>🧭 {{ . }}</span>
     </div>
   {{ end }}
 
