--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -17,7 +17,6 @@
 }
 
 
-
 .page-body p {
   margin: 0.8em 0;
   line-height: 1.3;
@@ -39,12 +38,12 @@
 .resume-biography .research-mission {
   font-size: 1.2rem;
   line-height: 1.5;
-  font-weight: 200;
-/*  color: #9f1239 !important;  /* muted rose */*/
+  font-weight: 400;
+/*  color: #9f2f2f !important;  /* muted rose */*/
   opacity: 0.85;
 }
 
 .dark .resume-biography .research-mission {
-/*  color: #fda4af !important;*/
+/*  color: #f1a1a1 !important;*/
   opacity: 0.9;
 }
